--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -1629,95 +1629,95 @@ fra:
     yearly: "Annuelle"
   notifications:
     access_denied: "Vous n’avez pas le droit d’accéder à cette page. %{reason} (%{url})"
-    bad_file: "Le fichier ne semble pas correspondre." #?
-    bookkeeping_is_finished: "La bascule en comptabilité est finie." #?
-    bookkeeping_works_only_with: "La bascule en comptabilité ne peut se faire actuellement que pour\_: %{list}." #?
-    cannot_delete_entity: "Il n’est pas possible de supprimer cette fiche car elle possède un historique comptable" #?
+    bad_file: "Le fichier ne semble pas correspondre."
+    bookkeeping_is_finished: "La bascule en comptabilité est finie."
+    bookkeeping_works_only_with: "La bascule en comptabilité ne peut se faire actuellement que pour\_: %{list}."
+    cannot_delete_entity: "Il n’est pas possible de supprimer cette fiche car elle possède un historique comptable"
     cannot_find_document_template: "Impossible de trouver le modèle de document"
-    cannot_mark_entry_items: "Impossible de lettrer ces lignes d’écritures ensemble" #?
-    cannot_merge_an_entity_with_itself: "Il n’est pas possible de fusionner une fiche avec elle-même" #?
-    cannot_merge_entities: "Une erreur est survenue. Il n’est pas possible de fusionner ces fiches." #?
-    changes_have_been_reflected: "Les changements ont été correctement répercutés sur l’état des stocks actuel" #?
-    changes_have_not_been_reflected: "Les changements n’ont pas pu être correctement répercutés sur l’état des stocks actuel" #?
-    closed_financial_years: "L’exercice a été correctement clôturé" #?
-    columns_are_already_uses: "Une ou plusieurs colonnes à importer sont sélectionnées plusieurs fois" #?
-    draft_entry_items_are_validated:  #?
-      one: "%{count} ligne de brouillard validée" #?
-      other: "%{count} lignes de brouillard validées" #?
-      zero: "Aucune ligne de brouillard validée" #?
-    entity_columns_are_needed: "Vous devez spécifier au moins une colonne pour la personne et notamment son nom de famille/dénomination sociale." #?
-    exception_raised: "Une erreur est survenue durant le traitement\_: %{message}" #?
+    cannot_mark_entry_items: "Impossible de lettrer ces lignes d’écritures ensemble"
+    cannot_merge_an_entity_with_itself: "Il n’est pas possible de fusionner une fiche avec elle-même"
+    cannot_merge_entities: "Une erreur est survenue. Il n’est pas possible de fusionner ces fiches."
+    changes_have_been_reflected: "Les changements ont été correctement répercutés sur l’état des stocks actuel"
+    changes_have_not_been_reflected: "Les changements n’ont pas pu être correctement répercutés sur l’état des stocks actuel"
+    closed_financial_years: "L’exercice a été correctement clôturé"
+    columns_are_already_uses: "Une ou plusieurs colonnes à importer sont sélectionnées plusieurs fois"
+    draft_entry_items_are_validated:
+      one: "%{count} ligne de brouillard validée"
+      other: "%{count} lignes de brouillard validées"
+      zero: "Aucune ligne de brouillard validée"
+    entity_columns_are_needed: "Vous devez spécifier au moins une colonne pour la personne et notamment son nom de famille/dénomination sociale."
+    exception_raised: "Une erreur est survenue durant le traitement\_: %{message}"
     expired_session: "Session expirée. Veuillez vous reconnecter."
-    fails_to_extract_listing: "L’extraction n’a pas pu s’effectuer\_: %{message}" #?
+    fails_to_extract_listing: "L’extraction n’a pas pu s’effectuer\_: %{message}"
     import_succeeded: "Vos données ont été correctement importées" #?
-    importation_cancelled: "Vos données n’ont été pas été importées. L’importation a été annulée" #?
-    importation_finished: "L’importation est terminée." #?
-    impossible_to_add_items: "Vous ne pouvez plus ajouter de produits à votre vente, le devis est passé en commande" #?
-    impossible_to_add_items_to_purchase: "Vous ne pouvez plus ajouter de produits à votre achat" #?
-    invalid_file_nature: "Type de fichier invalide" #?
-    journal_closed_on: "Le %{journal} a été clôturé au %{closed_on} correctement." #?
-    journal_entry_already_validated: "La pièce a déjà été validée et ne peut plus être modifiée" #?
-    journal_entry_has_been_saved: "La pièce N°%{number} a été enregistrée correctement" #?
-    journal_entry_items_marked_with_letter: "Les lignes d’écritures ont été lettrées avec la lettre %{letter}" #?
-    journal_reopened_on: "Le %{journal} a été déclôturé au %{closed_on} correctement." #?
-    mails_are_sent: "Les courriels ont été envoyés" #?
+    importation_cancelled: "Vos données n’ont été pas été importées. L’importation a été annulée"
+    importation_finished: "L’importation est terminée."
+    impossible_to_add_items: "Vous ne pouvez plus ajouter de produits à votre vente, le devis est passé en commande"
+    impossible_to_add_items_to_purchase: "Vous ne pouvez plus ajouter de produits à votre achat"
+    invalid_file_nature: "Type de fichier invalide"
+    journal_closed_on: "Le %{journal} a été clôturé au %{closed_on} correctement."
+    journal_entry_already_validated: "La pièce a déjà été validée et ne peut plus être modifiée"
+    journal_entry_has_been_saved: "La pièce N°%{number} a été enregistrée correctement"
+    journal_entry_items_marked_with_letter: "Les lignes d’écritures ont été lettrées avec la lettre %{letter}"
+    journal_reopened_on: "Le %{journal} a été déclôturé au %{closed_on} correctement."
+    mails_are_sent: "Les courriels ont été envoyés"
     need_balanced_journal_to_tax_declaration: "Tous vos journaux doivent être clôturés et équilibrés à cette date." #?
-    need_cash_to_record_statements: "Vous devez avoir au moins créer un compte bancaire pour pouvoir saisir un relevé de compte." #?
+    need_cash_to_record_statements: "Vous devez avoir au moins créer un compte bancaire pour pouvoir saisir un relevé de compte."
     need_closed_financial_year_to_declaration: "Vous devez avoir un exercice clôturé pour créer une déclaration de TVA." #?
     need_company_code_to_login: "Vous devez sélectionner votre société pour pouvoir vous connecter avec ce nom d’utilisateur" #?
-    need_entries_to_point: "Aucune écriture n’a été trouvé pour la période du relevé bancaire." #?
+    need_entries_to_point: "Aucune écriture n’a été trouvé pour la période du relevé bancaire."
     need_journal_to_manage_tax_declaration: "Vous devez avoir au moins un journal des opérations diverses et un journal de vente ou d’achat pour pouvoir enregistrer des déclarations de taxes." #?
-    need_payment_mode_to_create_deposit: "Vous devez spécifier un mode de réglement pour effectuer une remise en banque" #?
-    need_quantities_to_cancel_an_sale: "Vous devez spécifier une quantité pour pouvoir faire un avoir" #?
-    need_stocks_to_create_inventories: "Vous devez gérer les stocks d’au moins un produit pour pouvoir faire un inventaire" #?
+    need_payment_mode_to_create_deposit: "Vous devez spécifier un mode de réglement pour effectuer une remise en banque"
+    need_quantities_to_cancel_an_sale: "Vous devez spécifier une quantité pour pouvoir faire un avoir"
+    need_stocks_to_create_inventories: "Vous devez gérer les stocks d’au moins un produit pour pouvoir faire un inventaire"
     need_stocks_warehouse_to_create_products: "Vous devez créer un lieu de stockage pour pouvoir créer un produit" #?
-    need_to_create_subscription_nature: "Vous devez créer un type d’abonnement pour pouvoir gérer vos abonnements" #?
-    need_warehouse_to_create_purchase_item: "Vous devez créer un lieu de stockage pour pouvoir réaliser un achat" #?
+    need_to_create_subscription_nature: "Vous devez créer un type d’abonnement pour pouvoir gérer vos abonnements"
+    need_warehouse_to_create_purchase_item: "Vous devez créer un lieu de stockage pour pouvoir réaliser un achat"
     need_warehouse_to_create_sale_item: "Vous devez créer un lieu de stockage pour pouvoir réaliser une vente" #?
-    need_warehouse_to_record_stock_moves: "Pour pouvoir gérer vos stocks vous devez enregistrer vos lieux de stockage." #?
-    new_actual_number: "Le nouveau numéro en cours est %{actual_number}" #?
-    no_authenticated: "Vous n’avez pas pu être identifié. Le nom d’utilisateur ou le mot de passe doit être incorrect." #?
+    need_warehouse_to_record_stock_moves: "Pour pouvoir gérer vos stocks vous devez enregistrer vos lieux de stockage."
+    new_actual_number: "Le nouveau numéro en cours est %{actual_number}"
+    no_authenticated: "Vous n’avez pas pu être identifié. Le nom d’utilisateur ou le mot de passe doit être incorrect."
     no_balance_template: "Pas de modèle de document pour la balance" #?
     no_closable_financial_year: "Vous n’avez aucun exercice à clôturer." #?
-    no_closable_journal: "Vous ne pouvez pas clôturer ce journal." #?
-    no_depositable_payments: "Il n’y a pas de réglements à remettre en banque" #?
-    no_existing_mandates: "Il n’y a pas de responsabilités enregistrées pour l’instant" #?
+    no_closable_journal: "Vous ne pouvez pas clôturer ce journal."
+    no_depositable_payments: "Il n’y a pas de réglements à remettre en banque"
+    no_existing_mandates: "Il n’y a pas de responsabilités enregistrées pour l’instant"
     no_financial_year: "Aucun exercice enregistré" #?
-    no_items_found: "Aucun pruduit n’a été ajouté à la commande " #?
-    no_payment_to_deposit: "Aucun règlement à encaisser" #?
-    no_reopenable_journal: "Vous ne pouvez pas déclôturer ce journal." #?
+    no_items_found: "Aucun pruduit n’a été ajouté à la commande "
+    no_payment_to_deposit: "Aucun règlement à encaisser"
+    no_reopenable_journal: "Vous ne pouvez pas déclôturer ce journal."
     no_stocks: "Vous n’avez aucun stock. Si vous désirez gérer le stock d’un produit, veuillez cocher l’option «\_Gérer les stocks\_» dans les caractéristiques de votre produit." #?
     no_template_journal: "Pas de modèle journal" #?
     no_template_journal_by_id: "Pas de modèle journal" #?
-    no_unconfirmed_stock_transfers: "Aucun transfert de stocks non-confirmé" #?
-    no_unvalidated_operations: "Aucun travail à réaliser" #?
+    no_unconfirmed_stock_transfers: "Aucun transfert de stocks non-confirmé"
+    no_unvalidated_operations: "Aucun travail à réaliser"
     no_warehouse: "Aucun lieu de stockage n’est défini. Veuillez en créer un pour pouvoir gérer vos stocks" #?
-    password_successfully_changed: "Votre mot de passe a été mis à jour avec succès" #?
-    prices_import_succeeded: "Vos données ont été correctement importées" #?
+    password_successfully_changed: "Votre mot de passe a été mis à jour avec succès"
+    prices_import_succeeded: "Vos données ont été correctement importées"
     print_failure: "Impossible d’imprimer. Essayer de recharger les modèles de documents pour corriger le problème. %{error} (%{class})."
-    purchase_already_invoiced: "Achat déjà facturé" #?
+    purchase_already_invoiced: "Achat déjà facturé"
     record_cannot_be_removed: "L’enregistrement ne peut pas être supprimé"
     record_has_been_correctly_removed: "L’enregistrement a été supprimé correctement"
     record_has_not_been_removed: "L’enregistrement n’a pas être supprimé correctement" #?
-    restoration_finished: "La restauration de la sauvegarde s’est terminée (en %{value} secondes)." #?
-    sale_already_invoiced: "La vente a déjà été facturée: vous ne pouvez pas définir de livraison" #?
-    sale_cannot_be_updated: "Le devis n’est plus modifiable." #?
-    sale_cant_be_deleted: "La vente ne peut plus être supprimée" #?
-    select_entry_items_to_mark_together: "Sélectionnez des lignes d’écritures à lettrer ensemble" #?
-    specify_filter: "Vous choisir appliquer au moins un filtre de recherche" #?
-    specify_updates: "Vous devez spécifier au moins un champ à modifier" #?
+    restoration_finished: "La restauration de la sauvegarde s’est terminée (en %{value} secondes)."
+    sale_already_invoiced: "La vente a déjà été facturée: vous ne pouvez pas définir de livraison"
+    sale_cannot_be_updated: "Le devis n’est plus modifiable."
+    sale_cant_be_deleted: "La vente ne peut plus être supprimée"
+    select_entry_items_to_mark_together: "Sélectionnez des lignes d’écritures à lettrer ensemble"
+    specify_filter: "Vous choisir appliquer au moins un filtre de recherche"
+    specify_updates: "Vous devez spécifier au moins un champ à modifier"
     unavailable_model: "%{model} indisponible ou inexistante (%{id})"
     unknown_action: "La page demandée est indisponible (%{url})" #?
     unknown_company: "Société inconnue" #?
-    unvalid_version_for_restore: "La version du logiciel utilisé pour effectuer la sauvegarde ne correspond pas à la version actuelle du logiciel" #?
-    update_is_done: "La mise à jour a été effectuée" #?
-    validates_old_inventories: "Il est conseillé de supprimer ou de valider les inventaires non validés avant d’en faire un nouveau" #?
-    x_unpointed_journal_entry_items:  #?
-      one: "Il y a une écriture à pointer" #?
-      other: "Il y a %{count} écritures à pointer" #?
-      zero: "Il n’y a pas d’écritures à pointer pour l’instant" #?
-    you_must_have_an_email_column: "Vous devez avoir une colonne Email dans votre extraction" #?
-    you_must_select_a_file_to_import: "Vous devez sélectionner un fichier à importer" #?
+    unvalid_version_for_restore: "La version du logiciel utilisé pour effectuer la sauvegarde ne correspond pas à la version actuelle du logiciel"
+    update_is_done: "La mise à jour a été effectuée"
+    validates_old_inventories: "Il est conseillé de supprimer ou de valider les inventaires non validés avant d’en faire un nouveau"
+    x_unpointed_journal_entry_items:
+      one: "Il y a une écriture à pointer"
+      other: "Il y a %{count} écritures à pointer"
+      zero: "Il n’y a pas d’écritures à pointer pour l’instant"
+    you_must_have_an_email_column: "Vous devez avoir une colonne Email dans votre extraction"
+    you_must_select_a_file_to_import: "Vous devez sélectionner un fichier à importer"
     you_will_lose_all_your_current_data: "Si vous continuez, vous allez perdre toutes vos données en cours de saisie. Voulez-vous poursuivre ?" #?
   preferences:
     assets_sequence: "Numérotation des immobilisations"
