--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -34,12 +34,6 @@ fra:
       entity:
         active: "Active"
         origin: "Lieu de la première rencontre"
-      entity_event:
-        duration: "Durée (en minutes)"
-        location: "Lieu"
-        responsible: "Intervenant"
-      entity_event_nature:
-        duration: "Durée par défaut (en min.)"
       equipment:
         born_at: "Date de mise en service"
         content_maximal_quantity: "Capacité maximale"
@@ -84,11 +78,6 @@ fra:
         delivered: "Remis au bénéficiaire"
       outgoing_payment_mode:
         payments: "Décaissements"
-      product:
-        race: "Race"
-      product_category:
-        children: "Sous-catégories"
-        published: "Publiée"
       product_localization:
         arrival_cause: "Cause d'entrée"
         container: "Contenant"
@@ -114,51 +103,37 @@ fra:
         children: "Sous-catégories"
         published: "Publiée"
       product_nature_price:
+        amount: "Montant TTC"
         category: "Catégorie de fiche associée"
         entity: "Fournisseur"
-      product_specy:
-        code: "Code race"
-      product_stock:
-        quantity: "Stock réel"
-      product_stock_move:
-        origin: "Origine"
       product_transfer:
         second_warehouse: "Lieu de stockage d’arrivée"
         warehouse: "Lieu de stockage de départ"
       product_variety:
         code: "Code race"
-      products_nature:
-        duration: "Nombre de numéros OU période d’abonnement"
-        price: "Prix de revient"
       profession:
         employees: "Employés"
       purchase:
+        amount: "Montant TTC"
         items: "Lignes d’achat"
         label: "Commande"
         moved_on: "Reçu le"
         planned_on: "Réception prévue le"
+      purchase_item:
+        amount: "Montant TTC"
       sale:
+        amount: "Montant TTC"
         contact: "Adresse pour le devis"
         has_downpayment: "Acompte à verser"
         items: "Lignes de vente"
         parts_amount: "Montant payé"
         payments: "Encaissements"
       sale_item:
+        amount: "Montant TTC"
         label: "Produit"
         price: "Produit tarifé"
       sale_nature:
         downpayment: "Avec acompte"
-      sales_invoice:
-        credit: "Avoir"
-        items: "Lignes de facture"
-        origin: "Facture d’origine"
-      stock:
-        quantity: "Stock réel"
-      stock_move:
-        origin: "Origine"
-      stock_transfer:
-        second_warehouse: "Lieu de stockage d’arrivée"
-        warehouse: "Lieu de stockage de départ"
       subscription:
         entity: "Abonné"
       tax:
@@ -172,7 +147,6 @@ fra:
         active: "Utilisé"
       transfer:
         amount: "Montant"
-        parts_amount: "Montant payé"
       unit:
         start: "Valeur à l’origine"
       user:
@@ -1218,6 +1192,7 @@ fra:
     warehouse: "Lieu de stockage"
     warehouses: "Lieux de stockage"
     watcher: "Observateur" #?
+    # watchings: "Watchings"
     webpass: "Mot de passe web"
     websites: "Sites web"
     weight: "Poids (kg)"
