--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -333,6 +333,7 @@ jpn:
       # index: "Type de produit"
       # new: "Nouveau type de produit"
       # show: "Type de produit\_: %{name}"
+    backend/product_prices: #?
     backend/product_process_phases: #?
     backend/product_processes: #?
     backend/product_transfers:
