--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -3,12 +3,11 @@ fra:
     attributes:
       activity:
         family: "Famille"
-        favored_product_nature: "Produit de référence"
         nature: "Type de centre analytique"
         net_margin: "Marge nette"
         nomen: "Code analytique"
         parent: "Activité parente"
-        work_unit: "Unité d'oeuvre"
+        work_unit: "Unité d'œuvre"
       activity_repartition:
         activity: "Activité"
         affected_on: "Affecté le"
@@ -102,10 +101,10 @@ fra:
       product_nature_category:
         children: "Sous-catégories"
         published: "Publiée"
-      product_nature_price:
+      product_price_template:
         amount: "Montant TTC"
-        category: "Catégorie de fiche associée"
         entity: "Fournisseur"
+        listing: "Catégorie de fiche associée"
       product_transfer:
         second_warehouse: "Lieu de stockage d’arrivée"
         warehouse: "Lieu de stockage de départ"
@@ -242,6 +241,9 @@ fra:
         product_nature_price:
           already_defined: "Un prix a déjà été défini pour cette liste de prix et ce produit"
           range_overlap: "L’intervalle de quantité en chevauche un autre (de %{min} à %{max})"
+        product_price_template:
+          already_defined: "Un prix a déjà été défini pour cette liste de prix et ce produit"
+          range_overlap: "L’intervalle de quantité en chevauche un autre (de %{min} à %{max})"
         product_stock:
           product_cannot_be_in_warehouse: "Le produit ne peut pas être stocké dans le réservoir %{warehouse}"
         product_transfer:
@@ -304,7 +306,6 @@ fra:
       document_template: "Modèle de document"
       entity: "Personne"
       entity_address: "Adresse"
-      entity_category: "Catégorie de personne"
       entity_link: "Lien de personne"
       entity_link_nature: "Nature de lien entre personnes"
       entity_nature: "Type de personne"
@@ -358,8 +359,9 @@ fra:
       product_move: "Mouvement de stock"
       product_nature: "Type de produit"
       product_nature_category: "Catégorie de produit"
-      product_nature_price: "Prix"
-      # product_price: "Product price"
+      product_price: "Prix"
+      product_price_listing: "Liste de prix"
+      product_price_template: "Type de prix"
       # product_process: "Product process"
       # product_process_phase: "Product process phase"
       product_transfer: "Transfert ou perte de Stock"
@@ -398,7 +400,8 @@ fra:
     accounts: "Comptes" #?
     acquisition_amount: "Montant des acquisition"
     active: "Utilisable"
-    active_prices: "Prix en cours"
+    # active_price_templates: "Active price templates"
+    active_prices: "Prix en cours" #?
     activity: "Activity"
     activity_code: "Code APE/NAF"
     actual_number: "Numéro en cours"
@@ -730,7 +733,7 @@ fra:
     in_name: "Abréviation incluse dans le nom de la personne"
     included: "Incluse"
     incoming_deliveries: "Livraisons entrantes"
-    incoming_delivery_items: "Lignes de livraisons entrantes" #?
+    incoming_delivery_items: "Lignes de livraisons entrantes"
     incoming_delivery_modes: "Modes de livraisons entrantes" #?
     incoming_payment_modes: "Modes d’encaissement"
     incoming_payment_uses: "Parties d’encaissement" #?
@@ -958,7 +961,6 @@ fra:
     product_localizations: "Product localizations"
     product_moves: "Product moves"
     product_nature: "Product nature"
-    # product_nature_price: "Product nature price"
     product_natures: "Types de produits"
     # product_type: "Product type"
     productable_products: "Produits produisibles" #?
@@ -1044,6 +1046,7 @@ fra:
     sale_items: "Lignes de vente"
     sale_lines: "Sale lines" #?
     sale_natures: "Types de vente" #?
+    # sale_price_listing: "Sale price listing"
     # saleable: "Saleable"
     sales: "Ventes"
     sales_account: "Compte comptable de produits" #?
@@ -1413,48 +1416,11 @@ fra:
           purchase: "Création d’un achat" #?
           sale: "Création d’un devis" #?
           sales_invoice: "Création d’une facture" #?
-        incoming_payment_modes: #?
-          cash: #?
-            name: "Espèces" #?
-          check: #?
-            name: "Chèque" #?
-          transfer: #?
-            name: "Virement" #?
-        outgoing_payment_modes: #?
-          cash: #?
-            name: "Espèces" #?
-          check: #?
-            name: "Chèque" #?
-          transfer: #?
-            name: "Virement" #?
         product_category_name: "Sans catégorie" #?
-        purchase_nature_name: "Standard" #?
         role: #?
           name: #?
             admin: "Gérant" #?
             public: "Public (sans droits)" #?
-        sale_nature_name: "Vente standard" #?
-        taxes: #?
-          tva0000: #?
-            amount: "0.0" #?
-            collected: "445710" #?
-            name: "TVA 0,00%" #?
-            paid: "445660" #?
-          tva0210: #?
-            amount: "2.1" #?
-            collected: "445711" #?
-            name: "TVA 2,10%" #?
-            paid: "445661" #?
-          tva0550: #?
-            amount: "5.5" #?
-            collected: "445712" #?
-            name: "TVA 5,50%" #?
-            paid: "445662" #?
-          tva1960: #?
-            amount: "19.6" #?
-            collected: "445713" #?
-            name: "TVA 19,60%" #?
-            paid: "445663" #?
         warehouse_name: "Réserve" #?
       import: #?
         dont_use: "-- Ne pas utiliser --" #?
@@ -1509,6 +1475,18 @@ fra:
       no_right_defined_for_this_part_of_the_application: "Aucun droit défini pour cette partie de l’application\_: %{controller}/%{action}"
       no_right_defined_for_this_part_of_the_application_and_this_user: "Vous n’avez pas accès à cette partie de l’application"
       supplier: "Fournisseur"
+    entity_nature:
+      default:
+        man:
+          name: "Monsieur"
+          title: "M"
+        organization:
+          name: "Société"
+        undefined:
+          name: "Indéfini"
+        woman:
+          name: "Madame"
+          title: "Mme"
     financial_year:
       bookkeep: "[%{resource} %{number}] Amortissement de %{name} (%{position}/%{total})"
       code:
@@ -1517,6 +1495,14 @@ fra:
     incoming_payment:
       bookkeep: "[%{resource} %{number}] %{mode} %{check_number} de %{payer}"
       label: "%{number}. %{amount} du %{date} en %{mode} de %{payer}"
+    incoming_payment_mode:
+      default:
+        cash:
+          name: "Espèces"
+        check:
+          name: "Chèque"
+        transfer:
+          name: "Virement"
     inventory_item:
       inventory: "Inventaire "
     inventory_line: #?
@@ -1572,6 +1558,14 @@ fra:
     outgoing_payment:
       bookkeep: "[%{resource} %{number}] %{mode} %{check_number} pour %{payee}"
       label: "%{number}. %{amount} du %{date} en %{mode} pour %{payee}"
+    outgoing_payment_mode:
+      default:
+        cash:
+          name: "Espèces"
+        check:
+          name: "Chèque"
+        transfer:
+          name: "Virement"
     product:
       informations:
         with_components: "%{product} (%{unit}) (produit transformé)"
@@ -1602,7 +1596,7 @@ fra:
         purchases: "Achat"
         rent: "Location"
         sales: "Vente"
-    product_nature_price:
+    product_price_template:
       label: "%{product} / %{amount} %{currency}"
       no_range: "Pas d’intervalle"
       range: "De %{min} à %{max}"
@@ -1621,6 +1615,9 @@ fra:
       name: "%{product} (%{quantity}%{unit}) à %{amount}%{currency}/%{unit}"
       name_with_tracking: "%{product}/%{tracking} (%{quantity}%{unit}) à %{amount}%{currency}/%{unit}"
       tracking: "N°Lot\_: %{serial}"
+    purchase_nature:
+      default:
+        name: "Standard"
     sale:
       bookkeep: "[%{resource} %{number}] %{products} pour %{client} (%{sale})"
       label:
@@ -1652,6 +1649,8 @@ fra:
       reduction_on: "Remise de %{percent}% sur\_: %{product}"
       tracking: "N°Lot\_: %{serial}"
       warehouse_can_not_transfer_product: "Le produit %{product} ne peut être sorti du réservoir %{warehouse}, celui-ci contient %{contained_product} "
+    sale_nature:
+      sale_nature_name: "Vente standard"
     sequence:
       default:
         assets:
@@ -1694,6 +1693,28 @@ fra:
           number_format: "ABO[number|8]"
         transports:
           number_format: "TR[number|8]"
+    tax:
+      default:
+        tva0000:
+          amount: "0.0"
+          collected: "445710"
+          name: "TVA 0,00%"
+          paid: "445660"
+        tva0210:
+          amount: "2.1"
+          collected: "445711"
+          name: "TVA 2,10%"
+          paid: "445661"
+        tva0550:
+          amount: "5.5"
+          collected: "445712"
+          name: "TVA 5,50%"
+          paid: "445662"
+        tva1960:
+          amount: "19.6"
+          collected: "445713"
+          name: "TVA 19,60%"
+          paid: "445663"
     tax_declaration:
       deferment: "Reporté"
       monthly: "Mensuelle"
