--- a/config/locales/spa/rights.yml
+++ b/config/locales/spa/rights.yml
@@ -33,7 +33,6 @@ spa:
     # manage_document_templates: "Gérer les modèles de document"
     # manage_entities: "Gérer les fiches clients/fournisseurs"
     # manage_entities_natures: "Gérer les types de fiche"
-    # manage_entity_categories: "Gérer les catégories de fiche"
     # manage_entity_links: "Gérer les liens entre fiches"
     # manage_equipments: "Gérer le matériel"
     # manage_estimates: "Créer, modifier des devis"
@@ -55,6 +54,7 @@ spa:
     # manage_outgoing_payments: "Gérer les décaissements"
     # manage_prices: "Gérer les prix"
     # manage_product_categories: "Gérer les catégories de produits"
+    # manage_product_price_listings: "Gérer les listes de prix"
     # manage_products: "Gérer les produits"
     # manage_purchase_natures: "Gérer les types d’achat"
     # manage_purchases: "Gérer les achats"
