--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -146,11 +146,6 @@ fra:
     backend/entity_addresses:
       edit: "Modifier une coordonnée"
       new: "Ajouter une coordonnée"
-    backend/entity_categories:
-      edit: "Modifier la catégorie de fiche\_: %{name}"
-      index: "Catégories de fiche"
-      new: "Ajout d’une nouvelle catégorie de fiche"
-      show: "Catégorie de fiche\_: %{name}"
     backend/entity_link_natures:
       edit: "Modifier le type de lien\_: %{name}"
       index: "Types de lien"
@@ -371,18 +366,23 @@ fra:
       index: "Catégories de produits"
       new: "Ajout d’une nouvelle catégorie de produits"
       show: "Détail de la catégorie\_: %{name}"
-    backend/product_nature_prices:
-      edit: "Modifier le tarif de %{product_nature}"
-      export: "Exporter des tarifs"
-      find: "Trouver un tarif"
-      import: "Importer des tarifs"
-      index: "Tarifs"
-      new: "Nouveau tarif"
     backend/product_natures:
       edit: "Modifier le type de produit\_: %{name}"
       index: "Type de produit"
       new: "Nouveau type de produit"
       show: "Type de produit\_: %{name}"
+    backend/product_price_listings:
+      # edit: "Edit backend/product price listing"
+      # index: "Index backend/product price listing"
+      # new: "New backend/product price listing"
+      # show: "Show backend/product price listing"
+    backend/product_price_templates:
+      # edit: "Edit backend/product price template"
+      # export: "Export backend/product price template"
+      # find: "Find backend/product price template"
+      # import: "Import backend/product price template"
+      # index: "Index backend/product price template"
+      # new: "New backend/product price template"
     backend/product_prices:
       # edit: "Edit backend/product price"
       # index: "Index backend/product price"
@@ -584,7 +584,6 @@ fra:
     backend/documents: "Documents"
     backend/entities: "Personnes"
     backend/entity_addresses: "Adresses"
-    backend/entity_categories: "Catégories de fiche"
     backend/entity_link_natures: "Types de lien"
     backend/entity_links: "Liens entre personnes"
     backend/entity_natures: "Types de fiches"
@@ -636,8 +635,9 @@ fra:
     # backend/product_memberships: "Backend/product memberships"
     backend/product_moves: "Mouvements de stock"
     backend/product_nature_categories: "Catégories de type de produits"
-    backend/product_nature_prices: "Prix par type de produits"
     backend/product_natures: "Types de produits"
+    # backend/product_price_listings: "Backend/product price listings"
+    # backend/product_price_templates: "Backend/product price templates"
     # backend/product_prices: "Backend/product prices"
     # backend/product_process_phases: "Backend/product process phases"
     # backend/product_processes: "Backend/product processes"
